Bug 187014 - KickOff "Classic Menu" mode does not show horizontal separators available in kmenuedit
Summary: KickOff "Classic Menu" mode does not show horizontal separators available in ...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-kickoff (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 190031 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-03-12 23:24 UTC by Georges Goncalves
Modified: 2009-04-19 12:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Georges Goncalves 2009-03-12 23:24:15 UTC
Version:           1.0 (using KDE 4.2.1)
OS:                Linux
Installed from:    Ubuntu Packages

When using the KickOff Plasma widget in "Classic Menu" mode, no separator in menus is visible. They exist since they are present and displayed in KMenuEdit. Their state is also are correctly saved in all cases (rearranged, created, deleted) between KMenuEdit sessions.

This is a simple visual bug. Separators are very appreciable to order correctly the menu contents.

I used KickOff for about 2 weeks and I can't adapt it eventhough it way better than XP/Vista menus (where I also use classic menus).

So, I'd like "Classic Menu" to behave just like it was in KDE3 :-)

Thanks.
Comment 1 Christian Loose 2009-03-14 12:39:10 UTC
SVN commit 939224 by cloose:

Add support for separators to the ApplicationModel and the classic menu style variant of kickoff (simpleapplet).

REVIEWED: http://reviewboard.kde.org/r/293/
BUG: 187014



 M  +15 -6     core/applicationmodel.cpp  
 M  +1 -1      core/applicationmodel.h  
 M  +3 -1      core/models.h  
 M  +2 -0      simpleapplet/menuview.cpp  
 M  +1 -1      simpleapplet/simpleapplet.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=939224
Comment 2 Pino Toscano 2009-04-19 12:08:13 UTC
*** Bug 190031 has been marked as a duplicate of this bug. ***
Comment 3 Unknown 2009-04-19 12:13:51 UTC
My bug was marked as duplicate, so I will add the additional information here - the same problem exists not only in the classical menu, but also in the kickoff menu style.