Add support for separators to the ApplicationModel and the classic menu style variant of kickoff (simpleapplet).

REVIEWED: http://reviewboard.kde.org/r/293/
BUG: 187014


svn path=/trunk/KDE/kdebase/workspace/; revision=939224